# Flow

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  Main.cpp  README.md  mnist.bat  run.sh  run_mnist.bat  run_test.bat  setup.bat
Docs/: Broadcast.md  Stride.md
Include/: Flow.h
Include/Flow/: Log.h  Module.h  NArray.h  NArrayCore.h  Optimizer.h  Print.h  Vector.h
Showcase/: MakeMore.hpp  SimpleNN.hpp
Showcase/GPT/: gpt.py
Showcase/Llama/: .gitignore  llama.py
Showcase/Llama2/: .gitignore  llama2.py
Showcase/MNIST/: CMakeLists.txt  MNIST.cpp  MNIST.hpp  mnist.py  run.sh
Showcase/MakeMore/: CMakeLists.txt  MakeMore.cpp  MakeMore.hpp  run.sh
Showcase/SimpleNN/: CMakeLists.txt  SimpleNN.cpp  run.sh
Source/: ElementWise.hpp  Log.cpp  Module.cpp  NArray.cpp  NArrayCore.cpp  Optimizer.cpp  Print.cpp  Torch.hpp  Vector.cpp
Source/CUDA/: Add.cu  Broadcast.cu  Exp.cu  Gather.cu  Index.cu  Log.cu  MM.cu  Max.cu  Mul.cu  Pow.cu  ReLU.cu  Sum.cu  Transpose.cu
Source/Operations/: Add.cpp  Add.cu  BMM.cu  Broadcast.cpp  Broadcast.cu  CUDA.cuh  Conv.cpp  Convolution.cpp  CrossEntropy.cpp  Div.cpp  ElementWise.cu  ElementWise.hpp  Exp.cpp  Exp.cu  Fold.cu  Gather.cpp  Gather.cu  Index.cpp  Index.cu  Log.cpp  Log.cu  MM.cpp  MM.cu  Matmul.cpp  Max.cpp  Max.cu  MaxPool.cpp  Mean.cpp  Mul.cpp  Mul.cu  Neg.cpp  OneHot.cpp  Pow.cpp  Pow.cu  Prod.cu  ReLU.cpp  ReLU.cu  Reshape.cpp  Reshape.cu  Set.cu  (+13 more)
Source/Operations/CUDA/: CUDA.cuh  Gather.cu  Index.cu  Log.cu  MM.cu  Max.cu  Mul.cu  Sum.cu  Tanh.cu
Source/Ops/: Add.cu  BMM.cu  Broadcast.cu  CUDA.cuh  Div.cpp  Exp.cu  Fold.cu  Gather.cu  Index.cu  Log.cu  MM.cpp  Matmul.cpp  Max.cu  Mul.cu  Neg.cpp  Pow.cu  Prod.cu  ReLU.cu  Reshape.cpp  Set.cu  Softmax.cpp  Squeeze.cpp  Sum.cu  Tanh.cu  Unfold.cu  Unsqueeze.cpp
Source/Ops/Core/: Add.cu  BMM.cu  Broadcast.cu  Exp.cu  Fold.cu  Gather.cu  Index.cu  Log.cu  Max.cu  Mul.cu  Pow.cu  Prod.cu  ReLU.cu  Set.cu  Sum.cu  Tanh.cu  Unfold.cu
Source/Ops/Derived/: Convolution.cpp  CrossEntropy.cpp  MaxPool.cpp  Mean.cpp  Sub.cpp
Source/Ops/Utils/: OneHot.cpp
Source/Ops/Utils/Shape/: Transpose.cpp
Test/: Broadcasting.hpp  CMakeLists.txt  Test.cpp  Test.h  Test.hpp  TestAdd.hpp  TestBackward.hpp  TestBroadcast.hpp  TestCrossEntropy.hpp  TestExp.hpp  TestGather.hpp  TestIndex.hpp  TestLog.hpp  TestMM.hpp  TestMax.hpp  TestMul.hpp  TestMult.hpp  TestPow.hpp  TestReLU.hpp  TestSum.hpp  TestTanh.hpp  TestUnsqueeze.hpp  Torch.cpp  Torch.h  run.sh
