cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(FlowTest VERSION 1.0 LANGUAGES CXX CUDA)
find_package(CUDA 11.8 REQUIRED)
add_executable(test Test.cpp)
target_include_directories(test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../Include)
target_link_libraries(test PRIVATE ${CMAKE_SOURCE_DIR}/../build/Debug/flow.lib)
target_link_libraries(test PRIVATE ${CUDA_LIBRARIES})
target_include_directories(test PRIVATE ${CUDA_INCLUDE_DIRS})

# Torch
list(APPEND CMAKE_PREFIX_PATH "C:/Program Files/libtorch")
find_package(Torch REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
target_link_libraries(test PRIVATE ${TORCH_LIBRARIES})
target_include_directories(test PRIVATE ${TORCH_INCLUDE_DIRS})
file(GLOB TORCH_DLLS "${TORCH_INSTALL_PREFIX}/lib/*.dll")
add_custom_command(TARGET test POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${TORCH_DLLS} $<TARGET_FILE_DIR:test>)