cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(MakeMore VERSION 1.0)
add_executable(makemore MakeMore.cpp)
target_include_directories(makemore PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../Include)
target_link_libraries(makemore ${CMAKE_SOURCE_DIR}/../../build/libflow.a)