cmake_minimum_required(VERSION 3.12)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
project(MakeMore VERSION 1.0 LANGUAGES CXX CUDA)
find_package(CUDA REQUIRED)
add_executable(makemore MakeMore.cpp)
target_include_directories(makemore PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../../Include)
target_link_libraries(makemore PRIVATE ${CMAKE_SOURCE_DIR}/../../build/Debug/flow.lib)
target_link_libraries(makemore PRIVATE ${CUDA_LIBRARIES})
target_include_directories(makemore PRIVATE ${CUDA_INCLUDE_DIRS})